<resources>
    <string name="app_name">Student hunt</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <!--For Drawer Menu-->
    <string name="menu_home">Home</string>
    <string name="menu_department">Department</string>
    <string name="menu_chat">Department Chat</string>
    <string name="menu_ass_info">Add Info</string>
    <string name="menu_customize">Customize</string>
    <string name="menu_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
</resources>